src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_5.snap
---
source: src/parser/test.rs
description: if (x
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected ')' not found."), (0,4)->(0,5)),
        ),
        consequence: Err(
            Err(ExpectedTokenNotFound("SyntaxError: Expected '{' not found."), (0,4)->(0,5)),
        ),
        alternative: Ok(
            None,
        ),
    },
]

===================================

if (x
    ^ SyntaxError: Expected ')' not found.
    ^ SyntaxError: Expected '{' not found.
